--- a/templates/sudoers.j2
+++ b/templates/sudoers.j2
@@ -3,7 +3,7 @@
 # RGM sudoers
 
 # Aliases
-User_Alias RGM_ALIAS = {{ rgmweb_user }} apache
+User_Alias RGM_ALIAS = {{ rgmweb_user }}
 
 # command rules
 RGM_ALIAS ALL=NOPASSWD: \
