add ansible message in template headers

--- a/templates/httpd/nrdp.conf.j2
+++ b/templates/httpd/nrdp.conf.j2
@@ -1,3 +1,6 @@
+# {{ ansible_managed }}
+# Apache configuration for NRDP
+
 Alias /nrdp "/srv/rgm/nrdp/server"
 
 <Directory "/srv/rgm/nrdp/server">
