--- a/templates/chrony.conf.j2
+++ b/templates/chrony.conf.j2
@@ -1,3 +1,5 @@
+# {{ ansible_managed }}
+#
 # Use public servers from the pool.ntp.org project.
 # Please consider joining the pool (http://www.pool.ntp.org/join.html).
 {% for item in ntp_servers %}
