--- a/templates/httpd/rgm.conf.j2
+++ b/templates/httpd/rgm.conf.j2
@@ -1,3 +1,6 @@
+# {{ ansible_managed }}
+# Apache configuration for RGM
+
 RewriteEngine On
 RewriteCond %{HTTPS} !=on
 RewriteRule ^/?(.*) https://%{SERVER_NAME}/$1 [R,L]
