--- a/templates/httpd/grafana.conf.j2
+++ b/templates/httpd/grafana.conf.j2
@@ -1,3 +1,6 @@
+# {{ ansible_managed }}
+# Apache configuration for Grafana
+
 ProxyPreserveHost On
 <Location /grafana>
     AuthType Basic
@@ -13,12 +16,14 @@ ProxyPreserveHost On
 	AuthrgmPageLogin /login.php
 	AuthrgmSessionCookies On
 	Require valid-user 
-	ProxyPass http://127.0.0.1:3000
-	ProxyPassReverse http://127.0.0.1:3000
-	ProxyPassReverseCookiePath /grafana /grafana
-	ProxyPassReverseCookiePath /grafana /grafana
+    Require ip 127.0.0.1 {{ ansible_default_ipv4.address }}
+	ProxyPass http://{{ grafana_http_addr }}/{{ grafana_http_port }} retry=0 disablereuse=On
+	ProxyPassReverse http://{{ grafana_http_addr }}/{{ grafana_http_port }}
+	ProxyPassReverseCookiePath {{ grafana_root_url }} {{ grafana_root_url }}
+	ProxyPassReverseCookiePath {{ grafana_root_url }} {{ grafana_root_url }}
     # RewriteEngine On
     # RewriteRule .* - [E=PROXY_USER:%{LA-U:REMOTE_USER},NS]
-    # RequestHeader set X-WEBAUTH-USER "%{PROXY_USER}e"
     RequestHeader set X-WEBAUTH-USER "admin"
+    # RequestHeader set X-WEBAUTH-USER "%{PROXY_USER}e"
+    # RequestHeader unset Authorization
 </Location>
