- add grafana plugin - add curator and configuration - fix kibana setup - add reverse proxy for elasticsearch

--- a/templates/httpd/kibana.conf.j2
+++ b/templates/httpd/kibana.conf.j2
@@ -1,8 +1,6 @@
 # {{ ansible_managed }}
 # Apache configuration for Kibana
 
-#todo: replace IP with target ip or FQDN
-
 ProxyPreserveHost On
 <Location /kibana>
         AuthType Basic
@@ -18,132 +16,6 @@ ProxyPreserveHost On
         AuthrgmPageLogin /login.php
         AuthrgmSessionCookies On
         Require valid-user
-        ProxyPass http://{{ ansible_default_ipv4.address }}:5601/app/kibana retry=0
-        ProxyPassReverse http://{{ ansible_default_ipv4.address }}:5601/app/kibana
-</Location>
-
-<Location /bundles>
-        AuthType Basic
-        AuthName "Restricted"
-        AuthrgmAuthoritative On
-        AuthrgmMySQLSocket /var/lib/mysql/mysql.sock
-        AuthrgmMySQLUsername {{ mariadb_user }}
-        AuthrgmMySQLPassword {{ mariadb_pwd }}
-        AuthrgmMySQLDB {{ db_rgmweb }}
-        AuthrgmMySQLTableSID sessions,users,groupright
-        AuthrgmMySQLFieldUID sessions.user_id
-        AuthrgmMySQLTableSIDCondition "`sessions`.`session_id`=$session_id AND `sessions`.`user_id`=$user_id AND `users`.`user_id`=$user_id AND `users`.`user_name`=$user_name AND (`users`.`group_id`=$group_id AND `groupright`.`group_id`=$group_id AND `groupright`.`tab_7`='1' OR `users`.`user_limitation`='1')"
-        AuthrgmPageLogin /login.php
-        AuthrgmSessionCookies On
-        Require valid-user
-        ProxyPass http://{{ ansible_default_ipv4.address }}:5601/bundles
-        ProxyPassReverse http://{{ ansible_default_ipv4.address }}:5601/bundles
-</Location>
-
-<Location /plugins>
-        AuthType Basic
-        AuthName "Restricted"
-        AuthrgmAuthoritative On
-        AuthrgmMySQLSocket /var/lib/mysql/mysql.sock
-        AuthrgmMySQLUsername {{ mariadb_user }}
-        AuthrgmMySQLPassword {{ mariadb_pwd }}
-        AuthrgmMySQLDB {{ db_rgmweb }}
-        AuthrgmMySQLTableSID sessions,users,groupright
-        AuthrgmMySQLFieldUID sessions.user_id
-        AuthrgmMySQLTableSIDCondition "`sessions`.`session_id`=$session_id AND `sessions`.`user_id`=$user_id AND `users`.`user_id`=$user_id AND `users`.`user_name`=$user_name AND (`users`.`group_id`=$group_id AND `groupright`.`group_id`=$group_id AND `groupright`.`tab_7`='1' OR `users`.`user_limitation`='1')"
-        AuthrgmPageLogin /login.php
-        AuthrgmSessionCookies On
-        Require valid-user
-        ProxyPass http://{{ ansible_default_ipv4.address }}:5601/plugins
-        ProxyPassReverse http://{{ ansible_default_ipv4.address }}:5601/plugins
-</Location>
-
-<Location /api>
-        AuthType Basic
-        AuthName "Restricted"
-        AuthrgmAuthoritative On
-        AuthrgmMySQLSocket /var/lib/mysql/mysql.sock
-        AuthrgmMySQLUsername {{ mariadb_user }}
-        AuthrgmMySQLPassword {{ mariadb_pwd }}
-        AuthrgmMySQLDB {{ db_rgmweb }}
-        AuthrgmMySQLTableSID sessions,users,groupright
-        AuthrgmMySQLFieldUID sessions.user_id
-        AuthrgmMySQLTableSIDCondition "`sessions`.`session_id`=$session_id AND `sessions`.`user_id`=$user_id AND `users`.`user_id`=$user_id AND `users`.`user_name`=$user_name AND (`users`.`group_id`=$group_id AND `groupright`.`group_id`=$group_id AND `groupright`.`tab_7`='1' OR `users`.`user_limitation`='1')"
-        AuthrgmPageLogin /login.php
-        AuthrgmSessionCookies On
-        Require valid-user
-        ProxyPass http://{{ ansible_default_ipv4.address }}:5601/api
-        ProxyPassReverse http://{{ ansible_default_ipv4.address }}:5601/api
-</Location>
-
-<Location /ui>
-        AuthType Basic
-        AuthName "Restricted"
-        AuthrgmAuthoritative On
-        AuthrgmMySQLSocket /var/lib/mysql/mysql.sock
-        AuthrgmMySQLUsername {{ mariadb_user }}
-        AuthrgmMySQLPassword {{ mariadb_pwd }}
-        AuthrgmMySQLDB {{ db_rgmweb }}
-        AuthrgmMySQLTableSID sessions,users,groupright
-        AuthrgmMySQLFieldUID sessions.user_id
-        AuthrgmMySQLTableSIDCondition "`sessions`.`session_id`=$session_id AND `sessions`.`user_id`=$user_id AND `users`.`user_id`=$user_id AND `users`.`user_name`=$user_name AND (`users`.`group_id`=$group_id AND `groupright`.`group_id`=$group_id AND `groupright`.`tab_7`='1' OR `users`.`user_limitation`='1')"
-        AuthrgmPageLogin /login.php
-        AuthrgmSessionCookies On
-        Require valid-user
-        ProxyPass http://{{ ansible_default_ipv4.address }}:5601/ui
-        ProxyPassReverse http://{{ ansible_default_ipv4.address }}:5601/ui
-</Location>
-
-<Location /app>
-        AuthType Basic
-        AuthName "Restricted"
-        AuthrgmAuthoritative On
-        AuthrgmMySQLSocket /var/lib/mysql/mysql.sock
-        AuthrgmMySQLUsername {{ mariadb_user }}
-        AuthrgmMySQLPassword {{ mariadb_pwd }}
-        AuthrgmMySQLDB {{ db_rgmweb }}
-        AuthrgmMySQLTableSID sessions,users,groupright
-        AuthrgmMySQLFieldUID sessions.user_id
-        AuthrgmMySQLTableSIDCondition "`sessions`.`session_id`=$session_id AND `sessions`.`user_id`=$user_id AND `users`.`user_id`=$user_id AND `users`.`user_name`=$user_name AND (`users`.`group_id`=$group_id AND `groupright`.`group_id`=$group_id AND `groupright`.`tab_7`='1' OR `users`.`user_limitation`='1')"
-        AuthrgmPageLogin /login.php
-        AuthrgmSessionCookies On
-        Require valid-user
-        ProxyPass http://{{ ansible_default_ipv4.address }}:5601/app
-        ProxyPassReverse http://{{ ansible_default_ipv4.address }}:5601/app
-</Location>
-
-<Location /socket.io>
-        AuthType Basic
-        AuthName "Restricted"
-        AuthrgmAuthoritative On
-        AuthrgmMySQLSocket /var/lib/mysql/mysql.sock
-        AuthrgmMySQLUsername {{ mariadb_user }}
-        AuthrgmMySQLPassword {{ mariadb_pwd }}
-        AuthrgmMySQLDB {{ db_rgmweb }}
-        AuthrgmMySQLTableSID sessions,users,groupright
-        AuthrgmMySQLFieldUID sessions.user_id
-        AuthrgmMySQLTableSIDCondition "`sessions`.`session_id`=$session_id AND `sessions`.`user_id`=$user_id AND `users`.`user_id`=$user_id AND `users`.`user_name`=$user_name AND (`users`.`group_id`=$group_id AND `groupright`.`group_id`=$group_id AND `groupright`.`tab_7`='1' OR `users`.`user_limitation`='1')"
-        AuthrgmPageLogin /login.php
-        AuthrgmSessionCookies On
-        Require valid-user
-        ProxyPass http://{{ ansible_default_ipv4.address }}:5601/socket.io
-        ProxyPassReverse http://{{ ansible_default_ipv4.address }}:5601/socket.io
-</Location>
-
-<Location /elasticsearch>
-        AuthType Basic
-        AuthName "Restricted"
-        AuthrgmAuthoritative On
-        AuthrgmMySQLSocket /var/lib/mysql/mysql.sock
-        AuthrgmMySQLUsername {{ mariadb_user }}
-        AuthrgmMySQLPassword {{ mariadb_pwd }}
-        AuthrgmMySQLDB {{ db_rgmweb }}
-        AuthrgmMySQLTableSID sessions,users,groupright
-        AuthrgmMySQLFieldUID sessions.user_id
-        AuthrgmMySQLTableSIDCondition "`sessions`.`session_id`=$session_id AND `sessions`.`user_id`=$user_id AND `users`.`user_id`=$user_id AND `users`.`user_name`=$user_name AND (`users`.`group_id`=$group_id AND `groupright`.`group_id`=$group_id AND `groupright`.`tab_7`='1' OR `users`.`user_limitation`='1')"
-        AuthrgmPageLogin /login.php
-        AuthrgmSessionCookies On
-        Require valid-user
-        ProxyPass http://{{ ansible_default_ipv4.address }}:5601/elasticsearch
-        ProxyPassReverse http://{{ ansible_default_ipv4.address }}:5601/elasticsearch
+        ProxyPass http://127.0.0.1:5601/kibana retry=0
+        ProxyPassReverse http://127.0.0.1:5601/kibana/(.*)
 </Location>
