--- a/templates/elastic/curator_actions.yml.j2
+++ b/templates/elastic/curator_actions.yml.j2
@@ -6,7 +6,7 @@ actions:
   1:
     action: close
     description: >-
-      close metricbeat-* indexes older than 2 days
+      close metricbeat-* indexes older than {{ curator.close_indices_delay }} days
     options:
       delete_aliases: False
     filters:
@@ -18,12 +18,12 @@ actions:
       source: name
       timestring: '%Y.%m.%d'
       unit: days
-      unit_count: 2
+      unit_count: {{ curator.close_indices_delay }}
 
   2:
     action: delete_indices
     description: >-
-      permanently delete metricbeat-* indices older than 15 days
+      permanently delete metricbeat-* indices older than {{ curator.delete_indices_delay }} days
     filters:
     - filtertype: pattern
       kind: prefix
@@ -33,4 +33,4 @@ actions:
       source: name
       timestring: '%Y.%m.%d'
       unit: days
-      unit_count: 30
+      unit_count: {{ curator.delete_indices_delay }}
