--- a/templates/httpd/elasticsearch.conf.j2
+++ b/templates/httpd/elasticsearch.conf.j2
@@ -3,6 +3,6 @@
 
 ProxyPreserveHost On
 <Location /elasticsearch>
-        ProxyPass http://127.0.0.1:9200/
-        ProxyPassReverse http://127.0.0.1:9200/
+        ProxyPass http://127.0.0.1:9200
+        ProxyPassReverse http://127.0.0.1:9200
 </Location>
