fix apache warning caused by missing servername

--- a/templates/httpd/rgm.conf.j2
+++ b/templates/httpd/rgm.conf.j2
@@ -1,6 +1,8 @@
 # {{ ansible_managed }}
 # Apache configuration for RGM
 
+ServerName {{ ansible_hostname }}
+
 RewriteEngine On
 RewriteCond %{HTTPS} !=on
 RewriteRule ^/?(.*) https://%{SERVER_NAME}/$1 [R,L]
