--- a/templates/httpd/distrib.conf.j2
+++ b/templates/httpd/distrib.conf.j2
@@ -1,7 +1,7 @@
 # {{ ansible_managed }}
 # Apache configuration for RGM package distribution
 
-Alias /distrib {{ rgm_root_path }}/distrib"
+Alias /distrib "{{ rgm_root_path }}/distrib"
 
 
 <Directory "{{ rgm_root_path }}/distrib">
