variabilize rgm dash config file

--- a/templates/grafana/rgm_dash.yml.j2
+++ b/templates/grafana/rgm_dash.yml.j2
@@ -8,4 +8,4 @@ providers:
   disableDeletion: false
   updateIntervalSeconds: 120 #how often Grafana will scan for changed dashboards
   options:
-    path: /srv/rgm/grafana/dashboards
+    path: "{{ grafana_rgm_dashboards }}"
