--- a/templates/elastic/curator_actions.yml.j2
+++ b/templates/elastic/curator_actions.yml.j2
@@ -9,6 +9,7 @@ actions:
       close metricbeat-* indexes older than {{ curator.close_indices_delay }} days
     options:
       delete_aliases: False
+      ignore_empty_list: True
     filters:
     - filtertype: pattern
       kind: prefix
@@ -24,6 +25,8 @@ actions:
     action: delete_indices
     description: >-
       permanently delete metricbeat-* indices older than {{ curator.delete_indices_delay }} days
+    options:
+      ignore_empty_list: True
     filters:
     - filtertype: pattern
       kind: prefix
