--- a/templates/distrib/one-liners.sql.j2
+++ b/templates/distrib/one-liners.sql.j2
@@ -4,6 +4,9 @@
 USE rgmweb;
 
 -- ol_tags injection
+
+DELETE FROM TABLE `ol_tags`;
+ALTER TABLE `ol_tags` AUTO_INCREMENT = 1;
 INSERT INTO `ol_tags` (`id`, `name`) VALUES
 {% for oltag in oneliner_tags %}
     ('{{ oltag.id }}', '{{ oltag.tag }}'){% if not loop.last %},
@@ -11,6 +14,8 @@ INSERT INTO `ol_tags` (`id`, `name`) VALUES
 {% endfor %};
 
 -- ol_items injection
+DELETE FROM TABLE `ol_items`;
+ALTER TABLE `ol_items` AUTO_INCREMENT = 1;
 INSERT INTO `ol_items` (`id`, `name`, `filename`, `shell`, `command`) VALUES 
 {% set id_item = 1 %}{% for olitem in oneliner_items %}
     ({{ id_item }}, '{{ olitem.item }}', '{{ olitem.md_file }}', '{{ olitem.shell }}', '{{ olitem.command }}'){% if not loop.last %},
@@ -18,6 +23,8 @@ INSERT INTO `ol_items` (`id`, `name`, `filename`, `shell`, `command`) VALUES
 {% set id_item = id_item + 1 %}{% endfor %};
 
 -- ol_items_tags injection
+DELETE FROM TABLE `ol_items_tags`;
+ALTER TABLE `ol_items_tags` AUTO_INCREMENT = 1;
 INSERT INTO `ol_items_tags` (`id_item`, `id_tags`) VALUES
 {% set id_item = 1 %}{% for olitem in oneliner_items %}
 {% for oltag in olitem.tags %}
@@ -25,5 +32,3 @@ INSERT INTO `ol_items_tags` (`id_item`, `id_tags`) VALUES
 {% endif %}{% endfor %}
 {% set id_item = id_item + 1 %}{% if not loop.last %},
 {% endif %}{% endfor %};
-
-
