--- a/templates/mariadb/my.cnf.j2
+++ b/templates/mariadb/my.cnf.j2
@@ -3,5 +3,5 @@
 # mariadb root user and password
 
 [client]
-user=root
-password={{ mariadb_root_password }}
+user={{ mariadbuser }}
+password={{ mariadbpasswd }}
