--- a/templates/xinetd_livestatus.j2
+++ b/templates/xinetd_livestatus.j2
@@ -2,7 +2,7 @@
 service livestatus
 {
     type        = UNLISTED
-    port        = {{ livestatus_port }}
+    port        = {{ xinetd_livestatus_port }}
     socket_type = stream
     protocol    = tcp
     wait        = no
