--- a/templates/grafana/rgm_ds.yml.j2
+++ b/templates/grafana/rgm_ds.yml.j2
@@ -32,12 +32,16 @@ datasources:
   basicAuth: false
   isDefault: false
   jsonData:
-    esVersion: 60
-    #keepCookies:[],
-    maxConcurrentShardRequests: 256
+    esVersion: 70
+    #keepCookies: [],
+    logLevelField:
+    logMessageField:
+    maxConcurrentShardRequests: 5
     timeField: '@timestamp'
   version: 1
   editable: false
+
+
 
 # list of datasources to insert/update depending
 # on what's available in the database
