--- a/templates/grafana/rgm_ds.yml.j2
+++ b/templates/grafana/rgm_ds.yml.j2
@@ -34,8 +34,8 @@ datasources:
   jsonData:
     esVersion: 70
     #keepCookies: [],
-    logLevelField:
-    logMessageField:
+    #logLevelField:
+    #logMessageField:
     maxConcurrentShardRequests: 5
     timeField: '@timestamp'
   version: 1
