fix prom install (still WIP) refactorize metricbeat install add metricbeat polling option

--- a/templates/distrib/conf/linux_metricbeat.yml.j2
+++ b/templates/distrib/conf/linux_metricbeat.yml.j2
@@ -4,7 +4,8 @@
 # Modules configuration
 metricbeat.config.modules:
   path: ${path.config}/modules.d/*.yml
-  reload.enabled: false
+  reload.enabled: true
+  reload.period: 120s
 
 # Elasticsearch template setting
 setup.template.settings:
