--- a/templates/httpd/grafana.conf.j2
+++ b/templates/httpd/grafana.conf.j2
@@ -23,6 +23,7 @@ ProxyPreserveHost On
     AuthrgmSessionCookies On
 
     Require valid-user
+    Require local
     # Require ip 127.0.0.1 {{ ansible_default_ipv4.address }}
 
     RewriteEngine On
