fix number of ES index replicas to 0 for Beats

--- a/templates/distrib/conf/windows_filebeat.yml.j2
+++ b/templates/distrib/conf/windows_filebeat.yml.j2
@@ -17,6 +17,7 @@ filebeat.config.modules:
 # Elasticsearch template setting
 setup.template.settings:
   index.number_of_shards: 1
+  index.number_of_replicas: 0
   index.codec: best_compression
 
 
