--- a/templates/metricbeat/module_apache.yml.j2
+++ b/templates/metricbeat/module_apache.yml.j2
@@ -1,3 +1,5 @@
+# {{ ansible_managed }}
+#
 # Module: apache
 # Docs: https://www.elastic.co/guide/en/beats/metricbeat/current/metricbeat-module-apache.html
 
