--- a/templates/distrib/conf/linux_metricbeat.yml.j2
+++ b/templates/distrib/conf/linux_metricbeat.yml.j2
@@ -10,6 +10,7 @@ metricbeat.config.modules:
 # Elasticsearch template setting
 setup.template.settings:
   index.number_of_shards: 1
+  index.number_of_replicas: 0
   index.codec: best_compression
 
 # General
