--- a/templates/distrib/conf/windows_auditbeat.yml.j2
+++ b/templates/distrib/conf/windows_auditbeat.yml.j2
@@ -15,6 +15,7 @@ auditbeat.modules:
 # Elasticsearch template setting
 setup.template.settings:
   index.number_of_shards: 1
+  index.number_of_replicas: 0
   index.codec: best_compression
 
 
