--- a/templates/metricbeat/module_kibana.yml.j2
+++ b/templates/metricbeat/module_kibana.yml.j2
@@ -1,3 +1,5 @@
+# {{ ansible_managed }}
+#
 # Module: kibana
 # Docs: https://www.elastic.co/guide/en/beats/metricbeat/current/metricbeat-module-kibana.html
 
