--- a/templates/grafana/rgm_dash.yml.j2
+++ b/templates/grafana/rgm_dash.yml.j2
@@ -1,9 +1,12 @@
+# {{ ansible_managed }}
+# https://grafana.com/docs/grafana/latest/administration/provisioning/#dashboards
+
 apiVersion: 1
 
 providers:
 - name: 'default'
   orgId: 1
-  folder: ''
+  folder: 'RGM-dashboards'
   type: file
   disableDeletion: false
   updateIntervalSeconds: 120 #how often Grafana will scan for changed dashboards
