--- a/templates/grafana/rgm_ds.yml.j2
+++ b/templates/grafana/rgm_ds.yml.j2
@@ -1,14 +1,10 @@
 # {{ ansible_managed }}
-# config file version
+# https://grafana.com/docs/grafana/latest/administration/provisioning/#data-sources
+
 apiVersion: 1
 
-# list of datasources that should be deleted from the database
-#deleteDatasources:
-#   - name: Graphite
-#     orgId: 1
-
 datasources:
-- name: nagflux
+- name: Nagflux
   type: influxdb
   access: proxy
   orgId: 1
@@ -21,9 +17,9 @@ datasources:
   basicAuthPassword:
   withCredentials:
   isDefault: true
-  version: 1
+  version: 2
   editable: false
-- name: elasticsearch
+- name: Elasticsearch
   type: elasticsearch
   access: proxy
   orgId: 1
@@ -38,53 +34,18 @@ datasources:
     #logMessageField:
     maxConcurrentShardRequests: 5
     timeField: '@timestamp'
+  version: 2
+  editable: false
+- name: Prometheus
+  type: prometheus
+  access: proxy
+  orgId: 1
+  url: http://localhost:9090/prometheus
+  database: ''
+  basicAuth: false
+  isDefault: false
   version: 1
   editable: false
-
-
-
-# list of datasources to insert/update depending
-# on what's available in the database
-#datasources:
-#   # <string, required> name of the datasource. Required
-# - name: Graphite
-#   # <string, required> datasource type. Required
-#   type: graphite
-#   # <string, required> access mode. direct or proxy. Required
-#   access: proxy
-#   # <int> org id. will default to orgId 1 if not specified
-#   orgId: 1
-#   # <string> url
-#   url: http://localhost:8080
-#   # <string> database password, if used
-#   password:
-#   # <string> database user, if used
-#   user:
-#   # <string> database name, if used
-#   database:
-#   # <bool> enable/disable basic auth
-#   basicAuth:
-#   # <string> basic auth username
-#   basicAuthUser:
-#   # <string> basic auth password
-#   basicAuthPassword:
-#   # <bool> enable/disable with credentials headers
-#   withCredentials:
-#   # <bool> mark as default datasource. Max one per org
-#   isDefault:
-#   # <map> fields that will be converted to json and stored in json_data
-#   jsonData:
-#      graphiteVersion: "1.1"
-#      tlsAuth: true
-#      tlsAuthWithCACert: true
-#      httpHeaderName1: "Authorization"
-#   # <string> json object of data that will be encrypted.
-#   secureJsonData:
-#     tlsCACert: "..."
-#     tlsClientCert: "..."
-#     tlsClientKey: "..."
-#     # <openshift\kubernetes token example>
-#     httpHeaderValue1: "Bearer xf5yhfkpsnmgo"
-#   version: 1
-#   # <bool> allow users to edit datasources from the UI.
-#   editable: false
+  jsonData:
+    httpMethod: GET
+    keepCookies: []
