--- a/templates/metricbeat/module_system.yml.j2
+++ b/templates/metricbeat/module_system.yml.j2
@@ -15,17 +15,17 @@
     - socket_summary
     #- entropy
     #- core
-    #- diskio
+    - diskio
     #- socket
-  process.include_top_n:
-    by_cpu: 5      # include top 5 processes by CPU
-    by_memory: 5   # include top 5 processes by memory
+  processes: ['.*']
+  process.include_top_n.enabled: false
 
 - module: system
   period: 5m
   metricsets:
     - filesystem
     - fsstat
+    - process
   processors:
   - drop_event.when.regexp:
       system.filesystem.mount_point: '^/(sys|cgroup|proc|dev|etc|host|lib)($|/)'
