--- a/templates/httpd/15_elastic_hq.conf.j2
+++ b/templates/httpd/15_elastic_hq.conf.j2
@@ -2,19 +2,20 @@
 # Apache configuration for Elasticsearch-HQ
 
 <Location /elastichq/>
-    AuthType Basic
-    AuthName "Restricted"
-    AuthrgmAuthoritative On
-    AuthrgmMySQLSocket /var/lib/mysql/mysql.sock
-    AuthrgmMySQLUsername {{ mariadb_user }}
-    AuthrgmMySQLPassword {{ mariadb_pwd }}
-    AuthrgmMySQLDB {{ db_rgmweb }}
-    AuthrgmMySQLTableSID sessions,users,groupright
-    AuthrgmMySQLFieldUID sessions.user_id
-    AuthrgmMySQLTableSIDCondition "`sessions`.`session_id`=$session_id AND `sessions`.`user_id`=$user_id AND `users`.`user_id`=$user_id AND `users`.`user_name`=$user_name AND `users`.`group_id`=$group_id AND `groupright`.`group_id`=$group_id"
-    AuthrgmPageLogin /login.php
-    AuthrgmSessionCookies On
-    Require valid-user
+
+<Location /elastichq/>
+    AuthType Env
+    AuthEnvUser user_name
+    <RequireAny>
+        <RequireAll>
+            Require env user_name
+            Require env session_id
+            Require alias-dbd-tab6
+            Require alias-dbd-update-epoch
+        </RequireAll>
+        Require local
+    </RequireAny>
+
     ProxyPass http://127.0.0.1:5000/
     ProxyPassReverse http://127.0.0.1:5000/
 </Location>
