--- a/templates/httpd/ssl.conf.j2
+++ b/templates/httpd/ssl.conf.j2
@@ -226,5 +226,7 @@ BrowserMatch "MSIE [2-5]" \
 CustomLog logs/ssl_request_log \
           "%t %h %{SSL_PROTOCOL}x %{SSL_CIPHER}x \"%r\" %b"
 
+    Include conf.d/rgm.inc
+
 </VirtualHost>                                  
 
