--- a/templates/httpd/00_hardening.conf.j2
+++ b/templates/httpd/00_hardening.conf.j2
@@ -6,7 +6,7 @@ ServerSignature Off
 
 ## FIXME : Not enabled yet : need extensive testing...
 #Header always set Content-Security-Policy   "default-src wss://*.{{ ansible_fqdn }} https://*.{{ ansible_fqdn }} data: 'unsafe-inline' 'unsafe-eval'"
-#Header always set X-Frame-Options           SAMEORIGIN
-#Header always set X-Content-Type-Options    nosniff
-#Header always set X-XSS-Protection          "1; mode=block"
-#Header always set Strict-Transport-Security "max-age=31536000; always"
+Header always set X-Frame-Options           SAMEORIGIN
+Header always set X-Content-Type-Options    nosniff
+Header always set X-XSS-Protection          "1; mode=block"
+Header always set Strict-Transport-Security "max-age=31536000; always"
