Add new services to apache sudo

--- a/templates/sudoers.j2
+++ b/templates/sudoers.j2
@@ -8,5 +8,12 @@
     /bin/systemctl * snmpd,\
     /bin/systemctl * nagios,\
     /bin/systemctl * gedd,\
+    /bin/systemctl * elasticsearch,\
+    /bin/systemctl * grafana-server,\
+    /bin/systemctl * prometheus,\
+    /bin/systemctl * influxdb,\
+    /bin/systemctl * metricbeat,\
+    /bin/systemctl * kibana,\
+    /bin/systemctl * nagflux,\
     /usr/bin/nmap
 
