--- a/templates/sudoers.j2
+++ b/templates/sudoers.j2
@@ -14,6 +14,5 @@
     /bin/systemctl * influxdb,\
     /bin/systemctl * metricbeat,\
     /bin/systemctl * kibana,\
-    /bin/systemctl * nagflux,\
-    /usr/bin/nmap
+    /bin/systemctl * nagflux
 
