Add flexibilty on main httpd configuration to include all .inc files

--- a/templates/httpd/ssl.conf.j2
+++ b/templates/httpd/ssl.conf.j2
@@ -222,5 +222,5 @@ BrowserMatch "MSIE [2-5]" \
          nokeepalive ssl-unclean-shutdown \
          downgrade-1.0 force-response-1.0
 
-    Include conf.d/rgm.inc
+    Include conf.d/*.inc
 </VirtualHost>
