Teleport could be started from rgmweb

--- a/templates/sudoers.j2
+++ b/templates/sudoers.j2
@@ -17,4 +17,5 @@ Defaults:{{ rgmweb_user }} !requiretty,use_pty,umask=0077
     /bin/systemctl * influxdb,\
     /bin/systemctl * metricbeat,\
     /bin/systemctl * kibana,\
-    /bin/systemctl * nagflux
+    /bin/systemctl * nagflux, \
+    /bin/systemctl * teleport
